--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@types/node": "^16.11.64",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
+    "axios": "^1.1.2",
+    "history": "^5.3.0",
     "i18next": "^21.10.0",
     "lodash": "^4.17.21",
     "material-ui-popup-state": "^4.1.0",
@@ -26,6 +28,7 @@
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.6",
     "typescript": "^4.8.4",
+    "universal-cookie": "^4.0.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
